--- a/SegundoObligatorio/src/Interfaz/Menu.form
+++ b/SegundoObligatorio/src/Interfaz/Menu.form
@@ -122,7 +122,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cargar la lista"/>
+        <Property name="text" type="java.lang.String" value="Guardar Sistema"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
