--- a/SegundoObligatorio/src/Interfaz/ConsultaDepositos.form
+++ b/SegundoObligatorio/src/Interfaz/ConsultaDepositos.form
@@ -61,6 +61,9 @@
     </Container>
     <Container class="java.awt.ScrollPane" name="scroll">
       <Properties>
+        <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
+          <Point value="[500, 500]"/>
+        </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[5000, 5000]"/>
         </Property>
